kubernetes/apps/org-graphql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: org
  labels:
    app.kubernetes.io/name: org
    app.kubernetes.io/part-of: azalea-homelab
