kubernetes/apps/org-graphql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org-graphql
  namespace: org
  labels:
    app.kubernetes.io/name: org-graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: org-graphql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: org-graphql
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: ssh-pod
              topologyKey: kubernetes.io/hostname
      containers:
        - name: org-graphql
          image: ghcr.io/pirackr/org-graphql:sha-662090d
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: org-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: org-data
          persistentVolumeClaim:
            claimName: ssh-pod-data
