kubernetes/apps/org-graphql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: org-graphql
  namespace: org
  labels:
    app.kubernetes.io/name: org-graphql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: org-graphql
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
