kubernetes/apps/org-graphql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: org-graphql
  namespace: org
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: org-graphql-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: todo.pirackr.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: org-graphql
                port:
                  number: 80
